fix btn spacing issue

--- a/src/Styles/NewSession.module.css
+++ b/src/Styles/NewSession.module.css
@@ -330,6 +330,17 @@ padding: 8rem 0px 5rem 0px;
   width: 30%;
   gap: 0.5rem;
 }
+@media (max-width: 1100px) {
+  .Div4> div:nth-child(4) {
+width: 50%;
+  }
+}
+@media (max-width: 650px) {
+  .Div4> div:nth-child(4) {
+width: 70%;
+  }
+}
+
 .Div4 div:nth-child(4) > input {
   padding: 0.5rem 1rem;
   outline: 0;
@@ -340,9 +351,11 @@ padding: 8rem 0px 5rem 0px;
   border-radius: 4px;
 }
 .Div4 div:nth-child(4) > button {
-  padding: 0px 1rem;
+  padding: 1.4rem 0rem !important;
   color: white;
   background: #7d75d8;
+  position: relative;
+  right: 0.8rem;
 }
 
 @media (max-width: 550px) {
